# fw-attr-editor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-deb.yml
src/: application.rs  main.rs  sysfs_firmware_attributes.rs
src/application/: controls.rs
