[package]
name = "fw-attr-editor"
description = "Linux Firmware Attributes Editor. Root privileges required"
authors = ["Anton Kharuzhyi <publicantroids@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive", "help", "usage", "suggestions"] }
eframe = "0.23.0"
egui = "0.23.0"
env_logger = "0.10.0"
log = "0.4.20"
strum = { version = "0.25.0", features = ["derive", "std"] }
system_shutdown = "4.0.1"

[package.metadata.deb]
depends = "libxcb-render0-dev, libxcb-shape0-dev, libxcb-xfixes0-dev, libxkbcommon-dev, libssl-dev"
section = "utility"
priority = "optional"
assets = [
    ["target/release/fw-attr-editor", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/fw-attr-editor/README", "644"],
]